CSS styling and layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,5 +15,5 @@
       %img{:src => "assets/atlanta.jpg"}/  
     = render 'layouts/navigation'
     = yield
-    / = render 'layouts/footer'
+    = render 'layouts/footer'
     = javascript_include_tag "application"
