--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,19 +1,42 @@
-@import "settings";
+
+h1 {
+  color: white !important;
+}
+
+.jumbotron {
+  background-color: orange;
+  width: 40%;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 2%;
+  padding-top: 2%;
+  opacity: 0.6; 
+  border-radius: 20%;
+  box-shadow: 20px 20px 20px;
+}
+
+// Signup form div 
+.form_container {
+  width: 50%;
+  height: 5%;
+  margin-left: auto ;
+  margin-right: auto ;
+  padding-bottom: 5%;
+  padding-top: 5%;
+}
 
 // Top-Bar Styling
-
 // Before
 .top-bar li a:not(.button) {
     background:orange;
     color: white;
     }
-
 // After
 .top-bar li a:not(.button):hover {
-    background:white;
-    color: orange;
+    background:white !important;
+    color: orange !important;
     }
-
 // Before
 .top-bar ul li.active:not(.has-form) a:not(.button) {
   background: orange;
@@ -30,7 +53,7 @@
     text-align: center;
     color: white;
     opacity: 0.6;
-    position: fixed;
+    position: fixed !important;
     bottom: 0px;
     left: 0px;
     width: 100%;
