--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -14,5 +14,4 @@
           = f.password_field :password
           = f.label :password_confirmation, "Confirmation"
           = f.password_field :password_confirmation
-          = f.submit "Create my account", class: "btn btn-large btn-primary"
-          
+          = f.submit "Create my account", class: "button radius"
