CSS styling and layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,10 +11,10 @@
   %body
     - flash.each do |key, value|
       %div{:class => "alert alert-#{key}"}= value
-    .banner
-      %img{:src => "assets/atlanta.jpg"}/ 
+    .banner 
+      %img{:src => "assets/atlanta.jpg"}/
     = render 'layouts/navigation'
-    .background
+    .container
       = yield
       / = render 'layouts/footer'
       = javascript_include_tag "application"
