--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,27 +1,48 @@
+// Fonts
+@import url("http://fonts.googleapis.com/css?family=Droid+Sans:400,700&effect=3d|3d-float");
+
 // Background Image
-.background {
+.container {
   background-image: url("/assets/background.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 
-h1 {
-  color: white !important;
-}
-
+// Jumbotron Styling
 .jumbotron {
   background-color: #FF9900;
   width: 40%;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 2%;
+  // margin-top: 2%;
   margin-bottom: 2%;
   padding-top: 2%;
-  opacity: 0.6; 
-  border-radius: 20%;
+  opacity: 0.9; 
+  border-radius: 25%;
   box-shadow: 20px 20px 20px;
+}
+.jumbotron h1 {
+  color: white;
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  text-shadow: 8px 8px 8px black;
+}
+.jumbotron h2 {
+  color: white;
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 400;
+  font-size: 50px;
+  text-shadow: 6px 6px 6px black;
+}
+.jumbotron .form_container h3 {
+  color: white;
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  text-shadow: 6px 6px 6px black;
 }
 
 // Signup form div 
@@ -32,6 +53,7 @@ h1 {
   margin-right: auto ;
   padding-bottom: 5%;
   padding-top: 5%;
+  color: white;
 }
 
 // Top-Bar Styling
