--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,18 +11,20 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <li class="active"><a href="#">Right Button Active</a></li>
-      <li class="has-dropdown">
-        <a href="#">Right Button Dropdown</a>
-        <ul class="dropdown">
-          <li><a href="#">First link in dropdown</a></li>
-          <li><a href="#">Active link in dropdown</a></li>
-        </ul>
-      </li>
-    </ul>
-
-    <!-- Left Nav Section -->
-    <ul class="left">
-      <li><a href="#">About</a></li>
+      <% if signed_in? %>
+        <li class="has-dropdown">
+          <a href="#">Menu</a>
+          <ul class="dropdown">
+            <li><%= link_to "Profile", current_user %></li>
+            <li><%= link_to "Sign Up", signup_path %></li>
+            <br />
+            <li><%= link_to "Helpo", help_path %></li>
+          </ul>
+        </li>
+      <% else %>
+        <li><%= link_to "Login", signin_path %></li>
+        <li><%= link_to "Sign Up", signup_path %></li>
+      <% end %>
     </ul>
   </section>
 </nav>
