--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,21 +10,30 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#">Right Button Active</a></li>
+      <% if signed_in? %>
+        <li class="active"><%= link_to "TRAFFIC!", current_user %></li>
+      <% else %>
+        <li class="active"><%= link_to "TRAFFIC!", signin_path %></li>
+      <% end %>
       <% if signed_in? %>
         <li class="has-dropdown">
           <a href="#">Menu</a>
           <ul class="dropdown">
             <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Sign Up", signup_path %></li>
-            <br />
-            <li><%= link_to "Helpo", help_path %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+            <li><%= link_to "Logout", signout_path, method: "delete" %></li>
           </ul>
         </li>
       <% else %>
         <li><%= link_to "Login", signin_path %></li>
         <li><%= link_to "Sign Up", signup_path %></li>
       <% end %>
+    </ul>
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li><%= link_to "Features", about_path %></li>
+      <li><%= link_to "Help", help_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </section>
 </nav>
