--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,16 +1,18 @@
-- provide(:title, "Edit user")
-%h1 Update your profile
-.row
-  .span6.offset3
-    = form_for(@user) do |f|
-      = render 'shared/error_messages'
-      = f.label :name
-      = f.text_field :name
-      = f.label :email
-      = f.text_field :email
-      = f.label :password
-      = f.password_field :password
-      = f.label :password_confirmation, "Confirm Password"
-      = f.password_field :password_confirmation
-      = f.submit "Save changes", class: "btn btn-large btn-primary"
-= f.submit "Create my account", class: "btn btn-large btn-primary"
+- provide(:title, "Edit Profile")
+ 
+.jumbotron  
+  %h1 Update your profile
+  .form_container
+    .row
+      .span6.offset3
+        = form_for(@user) do |f|
+          = render 'shared/error_messages'
+          = f.label :name
+          = f.text_field :name
+          = f.label :email
+          = f.text_field :email
+          = f.label :password
+          = f.password_field :password
+          = f.label :password_confirmation, "Confirm Password"
+          = f.password_field :password_confirmation
+          = f.submit "Save changes", class: "radius button"
