--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,8 @@
 // Fonts
 @import url("http://fonts.googleapis.com/css?family=Droid+Sans:400,700&effect=3d|3d-float");
 
+// Map
+#map-canvas { height: 100%; margin: 0; padding: 0;}
 
 // Banner
 #banner {
