--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,23 +1,93 @@
 
-  
-    <style type="text/css">
-      #map-canvas { height: 100%;  margin: 0; padding: 0;}
-    </style>
+   
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD32oFCWtStoFQ9JzajCXErEoGQNMWlIts">
     </script>
-    
+  
+ <div class="map_jumbotron">   
+  <div id="map-canvas"></div>
+</div>
 
+   <script>
+   var CUSTOM_MAP_ID = 'custom_style';
 
-<div id="map-canvas"></div>
-   <script type="text/javascript">
-      function initialize() {
+    // Custom Styling 
+      var featureOpts = [
+        {
+          stylers: [
+            { hue: '#890000' },
+            { visibility: 'simplified' },
+            { gamma: 0.5 },
+            { weight: 0.5 }
+          ]
+        },
+        {
+          elementType: 'labels',
+          stylers: [
+            { visibility: 'off' }
+          ]
+        },
+        {
+          featureType: 'water',
+          stylers: [
+            { color: '#890000' }
+          ]
+        }
+      ];
+
+    function initialize() {
         var mapOptions = {
-          center: { lat: -34.397, lng: 150.644},
-          zoom: 8
+          center: { lat: 33.748995, lng: -84.387982 },
+          zoom: 10,
+          mapTypeControlOptions: {
+            mapTypeIds: [google.maps.MapTypeId.ROADMAP, MY_MAPTYPE_ID]
+          },
+          MapTypeId: [google.maps.MapTypeId.ROADMAP, CUSTOM_MAP_ID]
+          // scrollwheel: false
         };
         var map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
+
+        var trafficLayer = new google.maps.TrafficLayer();
+        trafficLayer.setMap(map);
       }
-      google.maps.event.addDomListener(window, 'load', initialize);
+      // Try HTML5 geolocation
+      if(navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var pos = new google.maps.LatLng(position.coords.latitude,
+                                           position.coords.longitude);
+
+          var infowindow = new google.maps.InfoWindow({
+            map: map,
+            position: pos,
+            content: 'Location found using HTML5.'
+          });
+
+          map.setCenter(pos);
+        }, function() {
+          handleNoGeolocation(true);
+        });
+      } else {
+        // Browser doesn't support Geolocation
+        handleNoGeolocation(false);
+      }
+
+    function handleNoGeolocation(errorFlag) {
+      if (errorFlag) {
+        var content = 'Error: The Geolocation service failed.';
+      } else {
+        var content = 'Error: Your browser doesn\'t support geolocation.';
+      }
+
+      var options = {
+        map: map,
+        position: new google.maps.LatLng(60, 105),
+        content: content
+      };
+
+      var infowindow = new google.maps.InfoWindow(options);
+      map.setCenter(options.position);
+    }
+
+    google.maps.event.addDomListener(window, 'load', initialize);
     </script>
  
