--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,8 +5,10 @@
     %title
       Traffic Hero | #{yield(:title)}
     = stylesheet_link_tag    "application"
+    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyD32oFCWtStoFQ9JzajCXErEoGQNMWlIts"
     = javascript_include_tag "application"
     = javascript_include_tag "vendor/modernizr"
+    
 
     = csrf_meta_tags
   %body
