--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,11 +11,7 @@
     <!-- Right Nav Section -->
     <ul class="right">
       <% if signed_in? %>
-        <li class="active"><%= link_to "TRAFFIC!", current_user %></li>
-      <% else %>
-        <li class="active"><%= link_to "TRAFFIC!", signin_path %></li>
-      <% end %>
-      <% if signed_in? %>
+        <li class="active"><%= link_to "TRAFFIC!", maps_show_path %></li>
         <li class="has-dropdown">
           <a href="#">Menu</a>
           <ul class="dropdown">
@@ -24,6 +20,7 @@
             <li><%= link_to "Logout", signout_path, method: "delete" %></li>
           </ul>
         </li>
+      </ul>
       <% else %>
         <li><%= link_to "Login", signin_path %></li>
         <li><%= link_to "Sign Up", signup_path %></li>
