--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -15,4 +15,5 @@
           = f.label :password_confirmation, "Confirmation"
           = f.password_field :password_confirmation
           = f.submit "Create my account", class: "button radius"
-          = link_to "Sign In", signin_path
+          %br/
+          = link_to "Login", signin_path
