--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,12 +41,13 @@
 .jumbotron {
   background-color: #FF9900;
   width: 40%;
+  height: 100%;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 2%;
-  margin-bottom: 2%;
+  margin-bottom: auto;
   padding-top: 2%;
+  padding-bottom: 2%;
   opacity: 0.9; 
   border-radius: 25%;
   box-shadow: 20px 20px 20px;
@@ -83,7 +84,7 @@
 // Signup form div 
 .form_container {
   width: 50%;
-  height: 5%;
+  height: auto;
   margin-left: auto ;
   margin-right: auto ;
   padding-bottom: 5%;
