--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,10 +2,7 @@
 @import url("http://fonts.googleapis.com/css?family=Droid+Sans:400,700&effect=3d|3d-float");
 
 // Map
-#map-canvas { height: 100%; 
-  margin: 0; 
-  padding-right: 10;
-}
+#map-canvas { height: 100%; }
 // Makes Map Controls Render Correctly
 .gmnoprint img { max-width: none; }
 
@@ -35,25 +32,23 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  padding-top: 0.5%;
-  padding-bottom: 1%;
 }
 
 // Jumbotron Styling
 .jumbotron {
   background-color: #FF9900;
   width: 40%;
-  height: 100%;
+  height: 90%;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: auto;
   padding-top: 2%;
-  padding-bottom: 2%;
   opacity: 0.9; 
   border-radius: 25%;
   box-shadow: 20px 20px 20px;
 }
+
 .jumbotron h1 {
   color: white;
   font-family: 'Droid Sans', sans-serif;
