--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -73,6 +73,13 @@
   font-size: 30px;
   text-shadow: 6px 6px 6px black;
 }
+.jumbotron h3 {
+  color: white;
+  font-family: 'Droid Sans', sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  text-shadow: 6px 6px 6px black;
+}
 .jumbotron p {
   color: white;
   font-family: 'Droid Sans', sans-serif;
