--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -152,15 +152,15 @@
 }
 
 /* forms */
-#error_explanation {
-  color: #f00;
-  ul {
-    list-style: none;
-    margin: 0 0 18px 0;
-  }
-}
+// #error_explanation {
+//   color: #f00;
+//   ul {
+//     list-style: none;
+//     margin: 0 0 18px 0;
+//   }
+// }
 
-.field_with_errors {
-  @extend .control-group;
-  @extend .error;
-}
+// .field_with_errors {
+//   @extend .control-group !optional;
+//   @extend .error;
+// }
