--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = stylesheet_link_tag    "application"
     = javascript_include_tag "https://maps.googleapis.com/maps/api/js?&key=AIzaSyD32oFCWtStoFQ9JzajCXErEoGQNMWlIts"
     = javascript_include_tag "application"
-    = javascript_include_tag "vendor/modernizr"
+    = javascript_include_tag "modernizr"
     = csrf_meta_tags
   %body
     #banner
