Features static page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -93,6 +93,13 @@
   }
 }
 
+ul li {
+  font-family: 'Droid Sans', sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  color: white;
+  text-shadow: 4px 4px 4px black;
+}
 // Signup form div
 
 .form_container {
