--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -1,4 +1,9 @@
-- provide(:title, 'Home')
+- provide(:title, 'Features')
 
 .jumbotron
-  %h1 About Traffic Hero
+  %h1 Features
+  %ul 
+    %li Traffic Hero is a simple and easy to use web application that allows users to get real-time traffic information on the fly!
+    %li After creating and logging in to your account, navigate to TRAFFIC! or MY DRIVE.
+    %li TRAFFIC! uses Google Maps and geolocation to give users a live traffic map of their surrounding area.
+    %li MY DRIVE allows users to enter a starting point and destination and find out the traffic congestion and time stuck in traffic.
